--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <h1 class="h1-header slider">Awaken Your Senses with Coffee Koffein</h1><img
                                 src="images/6151b624205630b02dd2aa77-61545b21e40b6a2705fea461_tick.png" loading="lazy"
                                 alt="" class="image-swosh"><a data-w-id="51d8f3bf-f554-ef00-1d0d-1f3c7c9df12c"
-                                href="https://idlies.dotpe.in/" target="_blank" class="see-story w-inline-block">
+                                href="#contact" target="_blank" class="see-story w-inline-block">
                                 <div class="link-text">Contact Us</div><img
                                     src="images/6151b624205630b02dd2aa77-616fb58991a9cfc54a68226b_Arrow-new.png"
                                     loading="lazy" width="32" alt="" class="image-2">
@@ -95,7 +95,7 @@
                             <h1 class="h1-header slider">Awaken Your Senses with Coffee Koffein</h1><img
                                 src="images/6151b624205630b02dd2aa77-61545b21e40b6a2705fea461_tick.png" loading="lazy"
                                 alt="" class="image-swosh"><a data-w-id="e245285c-2982-ca56-aa20-901a421d9299"
-                                href="https://idlies.dotpe.in/" target="_blank" class="see-story w-inline-block">
+                                href="#contact" target="_blank" class="see-story w-inline-block">
                                 <div class="link-text">Contact Us</div><img
                                     src="images/6151b624205630b02dd2aa77-616fb58991a9cfc54a68226b_Arrow-new.png"
                                     loading="lazy" width="32" alt="" class="image-2">
@@ -109,7 +109,7 @@
                             <h1 class="h1-header slider">Fuel Your Day with Coffee Koffein</h1><img
                                 src="images/6151b624205630b02dd2aa77-61545b21e40b6a2705fea461_tick.png" loading="lazy"
                                 alt="" class="image-swosh"><a data-w-id="4ef4cbf8-d4b3-bb1d-2e08-c84f8ab66f83"
-                                href="https://idlies.dotpe.in/" target="_blank" class="see-story w-inline-block">
+                                href="#contact" target="_blank" class="see-story w-inline-block">
                                 <div class="link-text">Contact Us</div><img
                                     src="images/6151b624205630b02dd2aa77-616fb58991a9cfc54a68226b_Arrow-new.png"
                                     loading="lazy" width="32" alt="" class="image-2">
@@ -121,7 +121,7 @@
                             <h1 class="h1-header slider">Fuel Your Day with Coffee Koffein</h1><img
                                 src="images/6151b624205630b02dd2aa77-61545b21e40b6a2705fea461_tick.png" loading="lazy"
                                 alt="" class="image-swosh"><a data-w-id="ae343fb6-9645-5b6b-5f60-0ddc4c9b723a"
-                                href="https://idlies.dotpe.in/" target="_blank" class="see-story w-inline-block">
+                                href="#contact" target="_blank" class="see-story w-inline-block">
                                 <div class="link-text">Contact Us</div><img
                                     src="images/6151b624205630b02dd2aa77-616fb58991a9cfc54a68226b_Arrow-new.png"
                                     loading="lazy" width="32" alt="" class="image-2">
@@ -135,7 +135,7 @@
                             <h1 class="h1-header slider">Sip the Difference, Feel the Energy</h1><img
                                 src="images/6151b624205630b02dd2aa77-61545b21e40b6a2705fea461_tick.png" loading="lazy"
                                 alt="" class="image-swosh"><a data-w-id="faa0d29b-cc4a-fbae-697c-3a701806d476"
-                                href="https://idlies.dotpe.in/" target="_blank" class="see-story w-inline-block">
+                                href="#contact" target="_blank" class="see-story w-inline-block">
                                 <div class="link-text">Contact Us</div><img
                                     src="images/6151b624205630b02dd2aa77-616fb58991a9cfc54a68226b_Arrow-new.png"
                                     loading="lazy" width="32" alt="" class="image-2">
@@ -147,7 +147,7 @@
                             <h1 class="h1-header slider">Sip the Difference, Feel the Energy</h1><img
                                 src="images/6151b624205630b02dd2aa77-61545b21e40b6a2705fea461_tick.png" loading="lazy"
                                 alt="" class="image-swosh"><a data-w-id="5ca5bc8f-0b72-33ff-7d8f-4f59924cf831"
-                                href="https://idlies.dotpe.in/" target="_blank" class="see-story w-inline-block">
+                                href="#contact" target="_blank" class="see-story w-inline-block">
                                 <div class="link-text">Contact Us</div><img
                                     src="images/6151b624205630b02dd2aa77-616fb58991a9cfc54a68226b_Arrow-new.png"
                                     loading="lazy" width="32" alt="" class="image-2">
@@ -323,7 +323,7 @@
                     class="app-img"></a><a href="http://zoma.to/r/18585882" target="_blank"
                 class="order-link w-inline-block"><img
                     src="images/6151b624205630b02dd2aa77-616f97b3ad3458c3dd3f34a9_zomato.png" alt=""
-                    class="app-img"></a><a href="https://idlies.dotpe.in/" target="_blank"
+                    class="app-img"></a><a href="#contact" target="_blank"
                 class="order-link w-inline-block"><img
                     src="images/6151b624205630b02dd2aa77-616f97b35aaab3dc3a6161bb_dotpe.png" alt="" class="app-img"></a>
         </div>
